<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/weather_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/create_city_hint"/>
    
    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="100dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@+id/weather_city_name"
        app:layout_constraintTop_toBottomOf="@+id/weather_city_name"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_cloud_circle_24"
        android:contentDescription="@string/actual_weather_icon" />

    <TextView
        android:id="@+id/weather_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/weather_icon"
        app:layout_constraintTop_toTopOf="@+id/weather_icon"
        app:layout_constraintBottom_toBottomOf="@+id/weather_icon"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:textColor="@android:color/secondary_text_light"
        tools:text="Sunny with somme clouds" />

    <FrameLayout
        android:id="@+id/weather_information"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/weather_icon"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/weather_temperature_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/weather_temperature_label"
        style="@style/WeatherLabel"
        app:layout_constraintLeft_toLeftOf="@+id/weather_icon"
        app:layout_constraintTop_toTopOf="@+id/weather_information"
        app:layout_constraintBottom_toTopOf="@+id/weather_humidity_label"/>

    <TextView
        android:id="@+id/weather_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/weather_temperature_label"
        app:layout_constraintTop_toTopOf="@+id/weather_temperature_label"
        app:layout_constraintBottom_toBottomOf="@+id/weather_temperature_label"
        style="@style/WeatherData"
        tools:text="30°"/>

    <TextView
        android:id="@+id/weather_humidity_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/weather_humidity_label"
        style="@style/WeatherLabel"
        app:layout_constraintLeft_toLeftOf="@+id/weather_temperature_label"
        app:layout_constraintRight_toRightOf="@+id/weather_temperature_label"
        app:layout_constraintTop_toBottomOf="@+id/weather_temperature_label"
        app:layout_constraintBottom_toTopOf="@+id/weather_pressure_label"/>

    <TextView
        android:id="@+id/weather_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/weather_temperature"
        app:layout_constraintTop_toTopOf="@+id/weather_humidity_label"
        app:layout_constraintBottom_toBottomOf="@+id/weather_humidity_label"
        style="@style/WeatherData"
        tools:text="52%"/>

    <TextView
        android:id="@+id/weather_pressure_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/weather_pressure_label"
        style="@style/WeatherLabel"
        app:layout_constraintLeft_toLeftOf="@+id/weather_humidity_label"
        app:layout_constraintRight_toRightOf="@+id/weather_humidity_label"
        app:layout_constraintTop_toBottomOf="@+id/weather_humidity_label"
        app:layout_constraintBottom_toBottomOf="@id/weather_information"/>

    <TextView
        android:id="@+id/weather_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/weather_temperature"
        app:layout_constraintTop_toTopOf="@+id/weather_pressure_label"
        app:layout_constraintBottom_toBottomOf="@+id/weather_pressure_label"
        style="@style/WeatherData"
        tools:text="1014 hPa"/>

</androidx.constraintlayout.widget.ConstraintLayout>